# os-net-config

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  bindep.txt  check-commits  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: check-commits  ci.yml
doc/source/: config.rst  index.rst  remove_config.rst  usage.rst
etc/os-net-config/samples/: dcb_config_sample.yaml  dcb_day2_sample.yaml  dcb_sample.yaml  fallback_config.yaml  linux_bond.yaml  ovs_dpdk_nokernel.json  ovs_dpdk_nokernel.yaml  sample_remove_config.yaml  sriov_pf.json  sriov_pf.yaml  vdpa.json  vdpa.yaml
os_net_config/: __init__.py  cli.py  common.py  dcb_config.py  dcb_netlink.py  exit_codes.py  impl_eni.py  impl_ifcfg.py  impl_nmstate.py  objects.py  schema.yaml  sriov_bind_config.py  sriov_config.py  utils.py  validator.py
os_net_config/tests/: base.py  test_cli.py  test_impl_eni.py  test_impl_ifcfg.py  test_impl_nmstate.py  test_objects.py  test_sriov_bind_config.py  test_sriov_config.py  test_utils.py  test_validator.py
os_net_config/tests/environment/: netinfo_running_info_1.yaml
zuul.d/: projects.yaml
