[metadata]
name = os-net-config
summary = Declarative network configuration tool for hosts
description_file =
    README.rst
author = os-net-config Community
author_email = os-net-config@noreply.github.com
maintainer = os-net-config Community
license = Apache License (2.0)
home_page = https://github.com/os-net-config/os-net-config
project_urls =
    Release Notes = https://github.com/os-net-config/os-net-config/releases
    Source Code = https://github.com/os-net-config/os-net-config
classifier =
    Environment :: Console
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Networking
    Topic :: System :: Systems Administration

[files]
packages =
    os_net_config
data_files =
    site-packages/os_net_config = os-net-config/*

[entry_points]
console_scripts =
        os-net-config = os_net_config.cli:main
        os-net-config-sriov = os_net_config.sriov_config:main
        os-net-config-dcb = os_net_config.dcb_config:main
        os-net-config-sriov-bind = os_net_config.sriov_bind_config:main
